# Srt-AI-Voice-Assistant

./: .gitignore  Srt-AI-Voice-Assistant.py  main.py  pyproject.toml
Sava_Utils/: audio_separator.py  edit_panel.py  settings.py  subtitle.py  subtitle_optimizer.py  subtitle_processor.py  subtitle_text_formatter.py  subtitle_translation.py  utils.py  video_speed_adjuster.py
Sava_Utils/i18nAuto/translations/: zh_CN.py
Sava_Utils/tts_projects/: edgetts.py  indextts.py
core/: __init__.py  audio_separator.py  edit_panel.py  settings.py  subtitle.py  subtitle_processor.py  subtitle_translation.py  utils.py
core/extern_extensions/: wav2srt_webui.py
core/i18nAuto/translations/: fr_FR.py  ja_JP.py  ko_KR.py  zh_CN.py
core/man/en_US/: help_custom.py
core/man/zh_CN/: help_custom.py
core/tts_projects/: bv2.py  cosyvoice2.py  custom.py  edgetts.py  gpt_sovits.py  gsv.py  indextts.py  mstts.py
